@@ -30,6 +30,7 @@
 #define BLE_NAME_NUS                    "BLE_UART"
 #define BLE_NAME_FLAGS                  "BLE_FLAGS"
 #define BLE_NAME_GATT_SERVER            "BLE_GATTS"
+#define BLE_NAME_SECURITY               "BLE_SEC"
 
 typedef enum {
   BLE_FLAGS_NONE = 0,
