@@ -5,6 +5,8 @@
             Added HttpServerResponse.setHeader
             HttpServerResponse now automatically sends `Connection:close` unless overridden (fix #1596)
             Fix sign of RSSI reporting with setRSSIHandler
+            nRF52: Add docs for properties that weren't documented before
+            nRF52: Add ability to connect to device with passkey authentication
 
      2v01 : ESP32: update to esp-idf V3.1
             Fix issues with Class Extends
